// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContainerShowHide prop visible:false matches html snapshot 1`] = `
<div
  class="container"
  id="testWidget"
  style="display: none;"
>
  slot text
</div>
`;

exports[`ContainerShowHide prop visible:true matches html snapshot 1`] = `
<div
  class="container"
  id="testWidget"
>
  slot text
</div>
`;
